# kohya_ss

./: .augmentignore  .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .hadolint.yml  .python-version  .release  .sd-scripts-release  123  =0.14.1  =13.7.1  AGENTS.md  CONTRIBUTING.md  CreatePhoto.py  Dockerfile  Jagdish  LoraUIBy-Rungniwat.ipynb  LoraUIBy_Rungniwat  LoraUIBy_Rungniwat.ipynb  LoraUIBy_Rungniwat2_ipynb.ipynb  LoraUIBy_Rungniwat_True_ipynb  LoraUIBy_Rungniwat_hide_.html  Lora_By_Rungniwat😍.ipynb  MANUAL_TRAIN.md  Oi  README-ja.md  README.md  README_dreambooth.md  README_finetune.md  README_train_network-ja.md  README_train_network.md  README_中文教程.md  SC_finetuning_gui.py  SECURITY.md  TRAINING.md  TrainModel.py  Untitled-1.sh  XTI_hijack.py  (+176 more)
.github/: FUNDING.yml
.out-of-scope/: README.md  musubi-tuner-models.md
BLIP_caption/: make_captions.py
app/: database.py  main.py  models.py  schemas.py  tasks.py
assets/: style.css  style_v2.css
bitsandbytes_windows/: main.py
deprecated/: dreambooth_gui.py  finetune_gui.py  lora_gui.py  textual_inversion_gui.py  utilities_gui.py
diffusers_fine_tuning/: README.md  clean_captions_and_tags.py  fine_tune.py  fine_tune_v1-ber.py  fine_tune_v1.py  fine_tuning_utils.py  fine_tuning_utils_ber.py  make_captions.py  merge_captions_to_metadata.py  merge_dd_tags_to_metadata.py  prepare_buckets_latents.py  requirements.txt  tag_images_by_wd14_tagger.py
doc/: pytorch-cuda-ver-check.txt
docs/: AGENTS.md  config_README-ja.md  docker.md  gui_v2.md  image_folder_structure.md  installation_aibadgr.md  installation_docker.md  installation_novita.md  installation_runpod.md  train_README-ja.md  train_README-zh.md  train_README.md  train_lll_README-ja.md  train_lllite_README-ja.md  train_lllite_README.md  train_network_README-ja.md  troubleshooting_tesla_v100.md
dreambooth_gui/: caption_gui.py  common_gui.py  dataset_balancing.py  dreambooth_folder_creation.py
examples/: LoRA based finetuning 2 phase.ps1  caption.ps1  caption_subfolders.ps1  finetune_latent.ps1  kohya-1-folders.ps1  kohya-3-folders.ps1  kohya.ps1  kohya_diffuser.ps1  kohya_finetune.ps1  kohya_new-v3.ps1  kohya_train_db_fixed_with-reg_SDv2 512 base.ps1  lucoris extract examples.txt  pull kohya_ss sd-scripts updates in.md  word_frequency.ps1
examples_dreambooth/: caption_subfolders.ps1  kohya.ps1  kohya_bucket.ps1  kohya_diffuser.ps1  kohya_new-v3.ps1  kohya_train_db_fixed_with-reg_SDv2 512 base.ps1  test.ps1  word_frequency.ps1
examples_finetune/: kohya_diffuser.ps1  word_frequency.ps1
finetune/: api_make_captions.py  blip.py  clean_captions_and_tags.py  gen_img_diffusers.py  make_captions.py  make_captions_by_git.py  merge_captions_to_metadata.py  merge_dd_tags_to_metadata.py  prepare_buckets_latents.py  prepare_buckets_latents_new.py  tag_images_by_wd14_tagger.py  tag_images_by_wd14_tagger_bmaltais.py
kohya_gui/: AGENTS.md  __init__.py  anima_lllite_gui.py  basic_caption_gui.py  blip2_caption_gui.py  blip_caption_gui.py  class_accelerate_launch.py  class_advanced_training.py  class_anima.py  class_basic_training.py  class_command_executor.py  class_configuration_file.py  class_dreambooth_gui.py  class_flux1.py  class_folders.py  class_gui_config.py  class_huggingface.py  class_hunyuan_image.py  class_lora_tab.py  class_lumina.py  class_metadata.py  class_sample_images.py  class_sd3.py  class_sdxl_parameters.py  class_source_model.py  class_tensorboard.py  common_gui.py  convert_lcm_gui.py  convert_model_gui.py  custom_logging.py  dataset_balancing_gui.py  dreambooth_folder_creation_gui.py  dreambooth_gui.py  extract_lora_from_dylora_gui.py  extract_lora_from_models_new_gui.py  extract_lora_gui.py  extract_lycoris_locon_gui.py  finetune_gui.py  flux_extract_lora_gui.py  flux_manual_caption_gui.py  (+22 more)
kohya_gui_v2/: accelerate_launch_fields.py  builder.py  config_io.py  fields.py  layout_map.py  legacy_import.py  placeholder_tab.py  registry.py  tab_builder.py
localizations/: chinese-sample.json  en-GB.json  zh-CN.json  zh-TW.json
networks/: check_lora_weights.py  control_net_lllite.py  control_net_lllite_for_train.py  control_net_lora.py  dylora.py  extract_control_net_lora.py  extract_lora_from_dylora.py  extract_lora_from_models copy.py  extract_lora_from_models.py  lora.py  lora_control_net.py  lora_diffusers.py  lora_interrogator.py  merge_lora.py  merge_lora_old.py  oft.py  resize_lora.py  sdxl_merge_lora.py  svd_merge_lora.py
scripts/: extract_layout_map.py  gen_anima_lllite_fields.py  gen_dreambooth_fields.py  gen_fields_common.py  gen_finetune_fields.py  gen_leco_fields.py  gen_lora_fields.py  gen_textual_inversion_fields.py  smoke_test_dreambooth.py  smoke_test_lora.py
sd-scripts/: .gitignore  README-ja.md  README.md  _typos.toml  anima_minimal_inference.py  anima_train.py  anima_train_network.py  fine_tune.py  flux_minimal_inference.py  flux_train.py  flux_train_control_net.py  flux_train_network.py  gen_img.py  gen_img_diffusers.py  hunyuan_image_minimal_inference.py  hunyuan_image_train_network.py  lumina_minimal_inference.py  lumina_train.py  lumina_train_network.py  pytest.ini  requirements.txt  sd3_minimal_inference.py  sd3_train.py  sd3_train_network.py  sdxl_minimal_inference.py  sdxl_train.py  sdxl_train_control_net.py  sdxl_train_control_net_lllite.py  sdxl_train_control_net_lllite_old.py  sdxl_train_network.py  sdxl_train_textual_inversion.py  train_control_net.py  train_controlnet.py  train_db.py  train_network.py  train_textual_inversion.py  train_textual_inversion_XTI.py
sd-try/: README-ja.md  README.md  XTI_hijack.py  fine_tune.py  latent_util.py  latent_util2.py  pool_utils.py  requirements.txt  sdxl_gen_img.py  sdxl_train.py  sdxl_train_control_net_lllite.py  sdxl_train_control_net_lllite_old.py  sdxl_train_network.py  sdxl_train_textual_inversion.py  train_controlnet.py  train_db.py  train_network.py  train_network_pool.py  train_network_try.py  train_textual_inversion.py  train_textual_inversion_XTI.py
setup/: check_local_modules.py  debug_info.py  docker_setup.py  setup.py  setup_common.py  setup_linux.py  (+7 more)
(+440 files in other folders)
